2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]
	* app/tools/gimprectangletool.c: changed the way that the handles
	are drawn. This is still work in progress.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/xcf-save.c: formatting.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_check_uri): use
	file_utils_uri_display_basename() instead of g_path_get_basename()
	to get an uri's basename.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/file/file-save.c (file_save): only save a thumbnail if we
	are saving as XCF.  Fixes bug #25272.

	* tools/pdbgen/pdb/fileops.pdb: create a libgimp wrapper for the
	"gimp-file-save-thumbnail" procedure.

	* app/pdb/fileops_cmds.c
	* libgimp/gimpfileops_pdb.[ch]: regenerated.

	* plug-ins/common/compressor.c (save_image): ask the core to save
	a thumbnail for compressed XCF files.

2006-11-05  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): take the additional row/column
	of pixels the grid line takes at the bottom/right side into account.
	Fixes bug #369656.

2006-11-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.[ch]: made gimp_rectangle_tool_halt()
	private. Get rid of some more local variables (use private->foo
	instead). Fixed statusbar rectangle size display. Some indentation
	cleanup.

2006-11-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.c
	(gimp_rectangle_options_iface_base_init): remove
	GIMP_CONFIG_PARAM_SERIALIZE from the x0, y0, width, height,
	center-x and center-y properties. Fixes bug #346683.

2006-11-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcroptool.c
	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.[ch]: moved stuff from
	GimpTool::initialize() to GObject::constructor() and removed all
	initialize functions entirely. initialize() only needs to be