@@ -161,8 +161,11 @@ void       gimp_draw_tool_draw_handle              (GimpDrawTool     *draw_tool,
                                                     GtkAnchorType     anchor,
                                                     gboolean          use_offsets);
 void       gimp_draw_tool_draw_corner              (GimpDrawTool     *draw_tool,
-                                                    gdouble           x,
-                                                    gdouble           y,
+                                                    gboolean          filled,
+                                                    gdouble           x1,
+                                                    gdouble           y1,
+                                                    gdouble           x2,
+                                                    gdouble           y2,
                                                     gint              width,
                                                     gint              height,
                                                     GtkAnchorType     anchor,
